docs/7.52/md/abenbuffer_memory.md
---
title: "Table Buffering - Buffer Management"
description: |
  -   Storage in the Memory(#abenbuffer-memory-1--------buffer-monitor---@ITOC@@ABENBUFFER_MEMORY_2) Storage in the Memory Table buffering takes place in the shared memory(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshared_memory_glosry.htm 'Glossary Entry') of each application
version: "7.52"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuffer_memory.htm"
abapFile: "abenbuffer_memory.htm"
keywords: ["do", "if", "try", "data", "internal-table", "abenbuffer", "memory"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopensql.htm) →  [Open SQL - Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_sql_oview.htm) →  [Open SQL - Table Buffering](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensap_puffering.htm) → 

Table Buffering - Buffer Management

-   [Storage in the Memory](#abenbuffer-memory-1--------buffer-monitor---@ITOC@@ABENBUFFER_MEMORY_2)

Storage in the Memory

Table buffering takes place in the [shared memory](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshared_memory_glosry.htm "Glossary Entry") of each application server. The [table buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_buffer_glosry.htm "Glossary Entry") consists of a central management structure, an alphabetical directory of tables, and a data area. The individual areas of a [generically buffered](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuffer_generic_buffering.htm) table or database view are managed as individual [fully buffered](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuffer_complete_buffering.htm) tables. The buffered data is saved in the data area as [internal tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_table_glosry.htm "Glossary Entry"). The data area is managed using SAP Memory Management.

When a buffered table or view is accessed using Open SQL, a search first takes place for the name of the table in the table directory and then a binary search takes place for the data.

In both single record buffering and in generic buffering, information about nonexistent rows in a table or view is also saved. The first time a nonexistent row is read, the key values of the primary key or generic key are loaded into the associated data area with an (otherwise empty) row and an appropriate flag. The next time an attempt is made to read this row, the buffer already indicates that this row does not exist.

Notes

-   The management of single record buffering is not quite as efficient as generic or full buffering. In single record buffering, the rows are loaded into the internal table in the data area one by one. In generic buffering and full buffering, all data of a table or view is loaded in a single step and sorted on the database.

-   When saved to memory, [null values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennull_value_glosry.htm "Glossary Entry") are transformed to type-dependent initial values.

Buffer Monitor

The buffer monitor is an SAP Memory Management tool (transaction ST02) used, among other things, to analyze the [table buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_buffer_glosry.htm "Glossary Entry") of the current application server. This includes tasks such as:

-   Displaying the buffer load on the application server over the last few days

-   Displaying and modifying the associated profile parameters

-   Displaying detailed information about the [table buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_buffer_glosry.htm "Glossary Entry").

-   Displaying table statistics for analyzing the effectiveness of a buffer. The displayed values are useful when optimizing the associated profile parameters and when detecting expensively buffered tables.

For more information, see the Bufferings documentation on [SAP Help Portal](http://help.sap.com).